--- a/app/views/helper/date.scala.html
+++ b/app/views/helper/date.scala.html
@@ -23,7 +23,7 @@
 <header class="topbar">
     <h1 class="fill" id="header-title">
         <a href="@routes.HomeController.index()">
-            Scout 24 Home Assingment &mdash; Advertisements  database
+            Play sample application &mdash; Computer database
         </a>
     </h1>
 </header>
