--- a/app/views/list.scala.html
+++ b/app/views/list.scala.html
@@ -34,7 +34,7 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
 <div id="actions">
 
     @form(action=routes.HomeController.list()) {
-    <input type="search" id="searchbox" name="f" value="@currentFilter" placeholder="Filter by computer name...">
+    <input type="search" id="searchbox" name="f" value="@currentFilter" placeholder="Filter by Ad name...">
     <input type="submit" id="searchsubmit" value="Filter by name" class="btn primary">
     }
 
@@ -42,9 +42,9 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
 
 </div>
 
-@Option(currentPage.items).filterNot(_.isEmpty).map { computers =>
+@Option(currentPage.items).filterNot(_.isEmpty).map { adverts =>
 
-<table class="computers zebra-striped">
+<table class="adverts zebra-striped">
     <thead>
     <tr>
         @header(1, "Id")
@@ -58,7 +58,7 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
     </thead>
     <tbody>
 
-    @computers.map {
+    @adverts.map {
     case (advert) => {
     <tr>
         <td><a href="@routes.HomeController.edit(advert.id.get)">@advert.id</a></td>
@@ -88,7 +88,7 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
         </li>
         }
         <li class="current">
-            <a>Displaying @(currentPage.offset + 1) to @(currentPage.offset + computers.size) of @currentPage.total</a>
+            <a>Displaying @(currentPage.offset + 1) to @(currentPage.offset + adverts.size) of @currentPage.total</a>
         </li>
         @currentPage.next.map { page =>
         <li class="next">
