--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Computers database</title>
+    <title>Advertisements database</title>
 
     @*************************************
     <link rel='stylesheet' href='@routes.Assets.at("lib/bootstrap/css/bootstrap.min.css")'>
