--- a/app/views/createForm.scala.html
+++ b/app/views/createForm.scala.html
@@ -38,7 +38,7 @@
     @select(
     advertForm("fuel"),
     fuels,
-    '_label -> "Fuel", '_default -> "-- Choose a company --",
+    '_label -> "Fuel", '_default -> "-- Choose a fuel --",
     '_showConstraints -> false
     )
 
